updated readme file

--- a/nodes/TARGET-NEW_NODE.yml
+++ b/nodes/TARGET-NEW_NODE.yml
@@ -10,7 +10,12 @@ operation:
   locationName: TARGET
   materializationType: table
   metadata:
-    appliedNodeTests: []
+    appliedNodeTests:
+      - continueOnFailure: true
+        description: ""
+        name: Test
+        runOrder: After
+        templateString: ""
     columns: []
     cteString: ""
     enabledColumnTestIDs: []
